[gd_scene load_steps=4 format=2]

[ext_resource path="res://art/title_art/wotl_logo_00.png" type="Texture" id=1]
[ext_resource path="res://key_scenes/title_screen/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://art/sounds/title_theme.mp3" type="AudioStream" id=3]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 602.0
color = Color( 0.0862745, 0.00784314, 0.227451, 1 )

[node name="GameLogo" type="Sprite" parent="."]
position = Vector2( 509.9, 258.5 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="TutorialButton" type="Button" parent="."]
margin_left = 541.9
margin_top = 434.5
margin_right = 661.9
margin_bottom = 466.5
text = "Tutorial"

[node name="StartButton" type="Button" parent="."]
margin_left = 357.9
margin_top = 434.5
margin_right = 477.9
margin_bottom = 466.5
text = "Start"

[node name="TitleTheme" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
